--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -36,12 +36,12 @@
    
   <mat-menu #menu="matMenu">
     <button mat-menu-item routerLink="inicio">Inicio</button>
-    <button mat-menu-item routerLink="basica">Basica</button>
-    <button mat-menu-item routerLink="hombre">Hombre</button>
-    <button mat-menu-item routerLink="mujer">Mujer</button>
-    <button (click)="registro()">Registro</button>
-    <button id="img">Añadir imagen</button>
-    <button id="img">Eliminar imagen</button>
+    <button mat-menu-item routerLink="busos-dama">Busos dama</button>
+    <button mat-menu-item routerLink="basica">Camisetas básicas</button>
+    <button mat-menu-item routerLink="articulos-personalizados">Artículos personalizados</button>
+    <button mat-menu-item routerLink="articulos-deportivos">Artículos deportivos</button>
+    <button mat-menu-item  (click)="registro()">Registro </button>
+    <button mat-menu-item  id="{{id}}">Añadir imagen</button>
 </mat-menu>
 </div>
 </div>
