--- a/src/app/components/inicio/inicio.component.html
+++ b/src/app/components/inicio/inicio.component.html
@@ -3,24 +3,19 @@
 
     <FORM name="form" action="">
 
-<P>Usuario:    <INPUT type="text" name="login" id="usuario"> 
-<P>Contraseña: <INPUT type="password" name="password" id="password"><br><br> 
-<INPUT (click)="go()" type="button" value="Acceder">
-<a href="#" class="closeModal" id="out">Cerrar</a>  
+      <P>Usuario:    <INPUT type="text" name="login" id="usuario"> 
+      <P>Contraseña: <INPUT type="password" name="password" id="password"><br><br> 
+      <INPUT (click)="imagenDownload()" type="button" value="Acceder">
+      <a href="#" class="closeModal" id="out">Cerrar</a>  
 
-</FORM> 
+    </FORM> 
 
   </div>
 </div>
 
 
-
-
-
 <div class="contenedor">
-  
   <div class="col-lg-10">
-    
     <div class="auxi">
       <div id="carousel1" class="carousel slide carousel-fade" data-ride="carousel">
         <div class="carousel-inner">
@@ -50,11 +45,9 @@
             <li data-target="#carousel1" data-slide-to="1"></li>
             <li data-target="#carousel1" data-slide-to="2"></li>
         </ol>
-        
-    </div>
-      
     </div>
   </div>
+</div>
 
 
 <div class="row row-cols-1 row-cols-md-4 row-cols-lg-4 row-cols-xl-4">
